--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -7,7 +7,7 @@ on:
   workflow_dispatch:
 
 jobs:
-  integration:
+  runcheck:
     runs-on: ubuntu-22.04
     steps:
       - uses: actions/checkout@v4
@@ -15,8 +15,7 @@ jobs:
       - name: Run
         uses: ./
         with:
-          repoUrl: git@gist.github.com:f6281d95065d3b942f13a8436768669f.git
-          # token: ${{ secrets.GH_PAT }}
+          repoUrl: ${{ secrets.SECRET_GIST_URL }}
           envFile: .tmpsecrets/.develop.ci-cd
           ageSecretKey: ${{ secrets.AGE_SECRET_KEY }}
 
